--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,36 @@
 spring.application.name=Far-West_Society
+
+
+server.port=1113
+
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+
+spring.datasource.url=jdbc:mysql://localhost:3306/fws?createDatabaseIfNotExist=true
+spring.datasource.password=root
+
+
+spring.jpa.show-sql=true
+#to stop logginh sql logs show-sql=false
+spring.jpa.hibernate.ddl-auto=update
+
+
+
+
+#gmail config
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=sabinbasi111gmail.com
+spring.mail.password=
+
+
+# Other properties
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# TLS , port 587
+spring.mail.properties.mail.smtp.starttls.enable=true
